adding greedyIdx logging

--- a/explore.ipynb
+++ b/explore.ipynb
@@ -30690,29 +30690,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "subsets=[]\n",
-    "steps=[81140, 100000, 125000, 150000, 175000, 200000, 225000, 250000, 275000]\n",
+    "steps=[81140, 100000, 125000, 150000, 175000, 200000, 225000, 250000, 275000, 300000, 325000, 350000, 375000, 400000, 425000, 450000, 475000, 500000, 525000, 550000, 575000, 600000, 625000, 650000, 675000, 700000, 725000, 750000, 775000, 800000, 825000, 850000, 875000, 900000, 925000, 950000, 975000]\n",
     "for step in steps:\n",
-    "    X=torch.load(folder+\"/nsp_one_subset_indices_after_step_\"+str(step)+\".pt\")\n",
+    "    X=torch.load(folder+\"/nsp_zero_subset_indices_after_step_\"+str(step)+\".pt\")\n",
     "    subsets.append(set(X.reshape(-1,).tolist()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9"
+       "37"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30723,16 +30723,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5192699"
+       "5192793"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30743,16 +30743,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1277200"
+       "1581319"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30763,25 +30763,449 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1277200\n",
-      "414635\n",
-      "213083\n",
-      "159331\n",
-      "140839\n",
-      "131635\n",
-      "125903\n",
-      "121519\n"
+      "1581319\n",
+      "557651\n",
+      "259485\n",
+      "166766\n",
+      "134277\n",
+      "120737\n",
+      "113474\n",
+      "108791\n",
+      "105241\n",
+      "102443\n",
+      "100108\n",
+      "98105\n",
+      "96443\n",
+      "94959\n",
+      "93644\n",
+      "92491\n",
+      "91417\n",
+      "90438\n",
+      "89543\n",
+      "88724\n",
+      "87930\n",
+      "87205\n",
+      "86597\n",
+      "85939\n",
+      "85361\n",
+      "84800\n",
+      "84284\n",
+      "83766\n",
+      "83281\n",
+      "82831\n",
+      "82429\n",
+      "82044\n",
+      "81663\n",
+      "81287\n",
+      "80923\n",
+      "80579\n"
      ]
     }
    ],
    "source": [
+    "s=subsets[0]\n",
+    "for i in range(1, len(subsets)):\n",
+    "    s=s.intersection(subsets[i])\n",
+    "    print(len(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import random\n",
+    "import numpy as np\n",
+    "from helper_fns import taylor_softmax_v1\n",
+    "import torch\n",
+    "import time\n",
+    "import math\n",
+    "\n",
+    "with open(\"/data-mount-hdd/subsets/bert_ingenious_11_05_2023_15:20:19/nsp_zero_gains_after_step_81140.pkl\", \"rb\") as f:\n",
+    "    gains=pickle.load(f)\n",
+    "# with open(\"/data-mount-hdd/subsets/bert_ingenious_11_05_2023_15:20:19/nsp_one_gains_after_step_81140.pkl\", \"rb\") as f:\n",
+    "#     gains_nsp_one=pickle.load(f)\n",
+    "# with open(\"/data-mount-hdd/subsets/bert_ingenious_11_05_2023_15:20:19/nsp_zero_partition_indices_after_step_81140.pkl\", \"rb\") as f:\n",
+    "#     partition_indices_nsp_zero=pickle.load(f)\n",
+    "# with open(\"/data-mount-hdd/subsets/bert_ingenious_11_05_2023_15:20:19/nsp_one_partition_indices_after_step_81140.pkl\", \"rb\") as f:\n",
+    "#     partition_indices_nsp_one=pickle.load(f)\n",
+    "\n",
+    "# batch_indices_nsp_zero=list(range(sum([len(g) for g in gains_nsp_zero])))\n",
+    "# batch_indices_nsp_one=list(range(sum([len(g) for g in gains_nsp_one])))\n",
+    "\n",
+    "# greedyList_nsp_zero=[]\n",
+    "# i=0\n",
+    "# for p in gains_nsp_zero:\n",
+    "#     greedyList_nsp_zero.append(greedyIdx_nsp_zero[i:i+len(p)])         \n",
+    "#     i+=len(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12095, 3023)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(gains[0]), len(gains[0])//4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "859\n",
+      "271\n",
+      "125\n",
+      "82\n",
+      "71\n",
+      "68\n",
+      "65\n",
+      "63\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "61\n",
+      "60\n",
+      "60\n",
+      "60\n",
+      "58\n",
+      "58\n",
+      "58\n",
+      "58\n",
+      "57\n",
+      "57\n",
+      "56\n",
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperature=1\n",
+    "probs=taylor_softmax_v1(torch.from_numpy(np.array([gains[0]])/temperature)).numpy()[0]\n",
+    "rng=np.random.default_rng(int(time.time()))\n",
+    "subsets=[]\n",
+    "for i in range(25):\n",
+    "    subsets.append(set(rng.choice(list(range(len(probs))), size=3023, replace=False, p=probs)))\n",
+    "s=subsets[0]\n",
+    "for i in range(1, len(subsets)):\n",
+    "    s=s.intersection(subsets[i])\n",
+    "    print(len(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1040\n",
+      "555\n",
+      "413\n",
+      "340\n",
+      "308\n",
+      "289\n",
+      "282\n",
+      "272\n",
+      "262\n",
+      "256\n",
+      "252\n",
+      "248\n",
+      "244\n",
+      "238\n",
+      "236\n",
+      "233\n",
+      "226\n",
+      "225\n",
+      "224\n",
+      "223\n",
+      "223\n",
+      "220\n",
+      "217\n",
+      "216\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperature=0.1\n",
+    "probs=taylor_softmax_v1(torch.from_numpy(np.array([gains[0]])/temperature)).numpy()[0]\n",
+    "rng=np.random.default_rng(int(time.time()))\n",
+    "subsets=[]\n",
+    "for i in range(25):\n",
+    "    subsets.append(set(rng.choice(list(range(len(probs))), size=3023, replace=False, p=probs)))\n",
+    "s=subsets[0]\n",
+    "for i in range(1, len(subsets)):\n",
+    "    s=s.intersection(subsets[i])\n",
+    "    print(len(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1198\n",
+      "720\n",
+      "570\n",
+      "500\n",
+      "453\n",
+      "431\n",
+      "415\n",
+      "400\n",
+      "388\n",
+      "375\n",
+      "366\n",
+      "361\n",
+      "356\n",
+      "352\n",
+      "345\n",
+      "342\n",
+      "336\n",
+      "330\n",
+      "328\n",
+      "323\n",
+      "323\n",
+      "320\n",
+      "318\n",
+      "316\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperature=0.01\n",
+    "probs=taylor_softmax_v1(torch.from_numpy(np.array([gains[0]])/temperature)).numpy()[0]\n",
+    "rng=np.random.default_rng(int(time.time()))\n",
+    "subsets=[]\n",
+    "for i in range(25):\n",
+    "    subsets.append(set(rng.choice(list(range(len(probs))), size=3023, replace=False, p=probs)))\n",
+    "s=subsets[0]\n",
+    "for i in range(1, len(subsets)):\n",
+    "    s=s.intersection(subsets[i])\n",
+    "    print(len(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1202\n",
+      "736\n",
+      "575\n",
+      "516\n",
+      "481\n",
+      "448\n",
+      "435\n",
+      "421\n",
+      "409\n",
+      "405\n",
+      "395\n",
+      "388\n",
+      "382\n",
+      "373\n",
+      "370\n",
+      "364\n",
+      "362\n",
+      "356\n",
+      "351\n",
+      "345\n",
+      "342\n",
+      "341\n",
+      "338\n",
+      "332\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperature=0.001\n",
+    "probs=taylor_softmax_v1(torch.from_numpy(np.array([gains[0]])/temperature)).numpy()[0]\n",
+    "rng=np.random.default_rng(int(time.time()))\n",
+    "subsets=[]\n",
+    "for i in range(25):\n",
+    "    subsets.append(set(rng.choice(list(range(len(probs))), size=3023, replace=False, p=probs)))\n",
+    "s=subsets[0]\n",
+    "for i in range(1, len(subsets)):\n",
+    "    s=s.intersection(subsets[i])\n",
+    "    print(len(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1186\n",
+      "741\n",
+      "584\n",
+      "514\n",
+      "474\n",
+      "455\n",
+      "437\n",
+      "427\n",
+      "417\n",
+      "407\n",
+      "398\n",
+      "388\n",
+      "383\n",
+      "376\n",
+      "369\n",
+      "366\n",
+      "362\n",
+      "357\n",
+      "353\n",
+      "352\n",
+      "348\n",
+      "345\n",
+      "342\n",
+      "338\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperature=0.0001\n",
+    "probs=taylor_softmax_v1(torch.from_numpy(np.array([gains[0]])/temperature)).numpy()[0]\n",
+    "rng=np.random.default_rng(int(time.time()))\n",
+    "subsets=[]\n",
+    "for i in range(25):\n",
+    "    subsets.append(set(rng.choice(list(range(len(probs))), size=3023, replace=False, p=probs)))\n",
+    "s=subsets[0]\n",
+    "for i in range(1, len(subsets)):\n",
+    "    s=s.intersection(subsets[i])\n",
+    "    print(len(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1187\n",
+      "740\n",
+      "577\n",
+      "512\n",
+      "470\n",
+      "440\n",
+      "420\n",
+      "406\n",
+      "397\n",
+      "388\n",
+      "381\n",
+      "372\n",
+      "369\n",
+      "365\n",
+      "360\n",
+      "355\n",
+      "354\n",
+      "352\n",
+      "348\n",
+      "346\n",
+      "342\n",
+      "340\n",
+      "337\n",
+      "336\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperature=0.00001\n",
+    "probs=taylor_softmax_v1(torch.from_numpy(np.array([gains[0]])/temperature)).numpy()[0]\n",
+    "rng=np.random.default_rng(int(time.time()))\n",
+    "subsets=[]\n",
+    "for i in range(25):\n",
+    "    subsets.append(set(rng.choice(list(range(len(probs))), size=3023, replace=False, p=probs)))\n",
+    "s=subsets[0]\n",
+    "for i in range(1, len(subsets)):\n",
+    "    s=s.intersection(subsets[i])\n",
+    "    print(len(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1188\n",
+      "725\n",
+      "583\n",
+      "514\n",
+      "479\n",
+      "448\n",
+      "429\n",
+      "421\n",
+      "406\n",
+      "393\n",
+      "388\n",
+      "385\n",
+      "381\n",
+      "377\n",
+      "373\n",
+      "369\n",
+      "366\n",
+      "364\n",
+      "360\n",
+      "357\n",
+      "354\n",
+      "352\n",
+      "347\n",
+      "346\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperature=0.000001\n",
+    "probs=taylor_softmax_v1(torch.from_numpy(np.array([gains[0]])/temperature)).numpy()[0]\n",
+    "rng=np.random.default_rng(int(time.time()))\n",
+    "subsets=[]\n",
+    "for i in range(25):\n",
+    "    subsets.append(set(rng.choice(list(range(len(probs))), size=3023, replace=False, p=probs)))\n",
     "s=subsets[0]\n",
     "for i in range(1, len(subsets)):\n",
     "    s=s.intersection(subsets[i])\n",
