--- a/explore.ipynb
+++ b/explore.ipynb
@@ -30685,7 +30685,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder=\"/data-mount-hdd/subsets/bert_ingenious_11_05_2023_15:20:19\""
+    "folder=\"/data-mount-hdd/subsets/bert_ingenious_20_05_2023_19:09:01\""
    ]
   },
   {
@@ -30695,9 +30695,10 @@
    "outputs": [],
    "source": [
     "subsets=[]\n",
-    "steps=[81140, 100000, 125000, 150000, 175000, 200000, 225000, 250000, 275000, 300000, 325000, 350000, 375000, 400000, 425000, 450000, 475000, 500000, 525000, 550000, 575000, 600000, 625000, 650000, 675000, 700000, 725000, 750000, 775000, 800000, 825000, 850000, 875000, 900000, 925000, 950000, 975000]\n",
+    "# steps=[81140, 100000, 125000, 150000, 175000, 200000, 225000, 250000, 275000, 300000, 325000, 350000, 375000, 400000, 425000, 450000, 475000, 500000, 525000, 550000, 575000, 600000, 625000, 650000, 675000, 700000, 725000, 750000, 775000, 800000, 825000, 850000, 875000, 900000, 925000, 950000, 975000]\n",
+    "steps=[81140, 100000, 125000, 150000, 175000, 200000, 225000, 250000, 275000, 300000, 325000, 350000, 375000, 400000, 425000, 450000, 475000]\n",
     "for step in steps:\n",
-    "    X=torch.load(folder+\"/nsp_zero_subset_indices_after_step_\"+str(step)+\".pt\")\n",
+    "    X=torch.load(folder+\"/nsp_one_subset_indices_after_step_\"+str(step)+\".pt\")\n",
     "    subsets.append(set(X.reshape(-1,).tolist()))"
    ]
   },
@@ -30709,7 +30710,7 @@
     {
      "data": {
       "text/plain": [
-       "37"
+       "17"
       ]
      },
      "execution_count": 4,
@@ -30729,7 +30730,7 @@
     {
      "data": {
       "text/plain": [
-       "5192793"
+       "5192699"
       ]
      },
      "execution_count": 5,
@@ -30749,7 +30750,7 @@
     {
      "data": {
       "text/plain": [
-       "1581319"
+       "2000129"
       ]
      },
      "execution_count": 6,
@@ -30770,42 +30771,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1581319\n",
-      "557651\n",
-      "259485\n",
-      "166766\n",
-      "134277\n",
-      "120737\n",
-      "113474\n",
-      "108791\n",
-      "105241\n",
-      "102443\n",
-      "100108\n",
-      "98105\n",
-      "96443\n",
-      "94959\n",
-      "93644\n",
-      "92491\n",
-      "91417\n",
-      "90438\n",
-      "89543\n",
-      "88724\n",
-      "87930\n",
-      "87205\n",
-      "86597\n",
-      "85939\n",
-      "85361\n",
-      "84800\n",
-      "84284\n",
-      "83766\n",
-      "83281\n",
-      "82831\n",
-      "82429\n",
-      "82044\n",
-      "81663\n",
-      "81287\n",
-      "80923\n",
-      "80579\n"
+      "2000129\n",
+      "1253852\n",
+      "1013126\n",
+      "905155\n",
+      "843344\n",
+      "802084\n",
+      "771851\n",
+      "748282\n",
+      "729090\n",
+      "712959\n",
+      "699361\n",
+      "687537\n",
+      "677128\n",
+      "667974\n",
+      "659810\n",
+      "652407\n"
      ]
     }
    ],
@@ -30851,7 +30832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -30860,7 +30841,7 @@
        "(12095, 3023)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30871,37 +30852,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "859\n",
-      "271\n",
+      "1887\n",
+      "1378\n",
+      "1100\n",
+      "900\n",
+      "762\n",
+      "655\n",
+      "573\n",
+      "511\n",
+      "448\n",
+      "410\n",
+      "377\n",
+      "340\n",
+      "300\n",
+      "277\n",
+      "246\n",
+      "228\n",
+      "204\n",
+      "183\n",
+      "173\n",
+      "159\n",
+      "146\n",
+      "132\n",
+      "118\n",
+      "105\n"
+     ]
+    }
+   ],
+   "source": [
+    "N=len(gains[0])\n",
+    "S=0.001\n",
+    "probs=np.array([math.pow(math.exp(math.log(S)/N), x+1) for x in range(N)])\n",
+    "probs=probs/np.sum(probs)\n",
+    "rng=np.random.default_rng(int(time.time()))\n",
+    "subsets=[]\n",
+    "for i in range(25):\n",
+    "    subsets.append(set(rng.choice(list(range(len(probs))), size=3023, replace=False, p=probs)))\n",
+    "s=subsets[0]\n",
+    "for i in range(1, len(subsets)):\n",
+    "    s=s.intersection(subsets[i])\n",
+    "    print(len(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "835\n",
+      "260\n",
       "125\n",
-      "82\n",
+      "99\n",
+      "83\n",
+      "77\n",
       "71\n",
-      "68\n",
-      "65\n",
+      "67\n",
+      "64\n",
       "63\n",
-      "61\n",
-      "61\n",
-      "61\n",
-      "61\n",
+      "62\n",
       "61\n",
       "60\n",
-      "60\n",
-      "60\n",
+      "59\n",
       "58\n",
-      "58\n",
-      "58\n",
-      "58\n",
+      "57\n",
       "57\n",
       "57\n",
       "56\n",
-      "55\n"
+      "55\n",
+      "54\n",
+      "54\n",
+      "54\n",
+      "54\n"
      ]
     }
    ],
@@ -31210,6 +31242,57 @@
     "for i in range(1, len(subsets)):\n",
     "    s=s.intersection(subsets[i])\n",
     "    print(len(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.97723722, 0.95499259, 0.9332543 , 0.91201084, 0.89125094,\n",
+       "       0.87096359, 0.85113804, 0.83176377, 0.81283052, 0.79432823,\n",
+       "       0.77624712, 0.75857758, 0.74131024, 0.72443596, 0.70794578,\n",
+       "       0.69183097, 0.67608298, 0.66069345, 0.64565423, 0.63095734,\n",
+       "       0.616595  , 0.60255959, 0.58884366, 0.57543994, 0.56234133,\n",
+       "       0.54954087, 0.5370318 , 0.52480746, 0.51286138, 0.50118723,\n",
+       "       0.48977882, 0.47863009, 0.46773514, 0.45708819, 0.44668359,\n",
+       "       0.43651583, 0.42657952, 0.41686938, 0.40738028, 0.39810717,\n",
+       "       0.38904514, 0.3801894 , 0.37153523, 0.36307805, 0.35481339,\n",
+       "       0.34673685, 0.33884416, 0.33113112, 0.32359366, 0.31622777,\n",
+       "       0.30902954, 0.30199517, 0.29512092, 0.28840315, 0.28183829,\n",
+       "       0.27542287, 0.26915348, 0.2630268 , 0.25703958, 0.25118864,\n",
+       "       0.24547089, 0.23988329, 0.23442288, 0.22908677, 0.22387211,\n",
+       "       0.21877616, 0.21379621, 0.20892961, 0.20417379, 0.19952623,\n",
+       "       0.19498446, 0.19054607, 0.18620871, 0.18197009, 0.17782794,\n",
+       "       0.17378008, 0.16982437, 0.16595869, 0.16218101, 0.15848932,\n",
+       "       0.15488166, 0.15135612, 0.14791084, 0.14454398, 0.14125375,\n",
+       "       0.13803843, 0.13489629, 0.13182567, 0.12882496, 0.12589254,\n",
+       "       0.12302688, 0.12022644, 0.11748976, 0.11481536, 0.11220185,\n",
+       "       0.10964782, 0.10715193, 0.10471285, 0.1023293 , 0.1       ])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "N=100\n",
+    "S=0.1\n",
+    "np.array([math.pow(math.exp(math.log(S)/N), x+1) for x in range(N)])"
    ]
   },
   {
